[tool.poetry]
name = "job-finder"
description = "Tools for wrangling job posts and tracking job applications"
authors = ["e-simons <me@e-simons.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
